--- a/website/index.html
+++ b/website/index.html
@@ -5,10 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Matt Scianna</title>
 
-  <!-- Font: Cardo -->
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
-  
-  <!-- Font Awesome for shopping bag icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <style>
@@ -18,6 +15,13 @@
       font-family: 'Cardo', serif;
       background-color: white;
       overflow: hidden;
+    }
+
+    * {
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
     }
 
     .header {
@@ -42,6 +46,7 @@
       filter: brightness(0) invert(1);
       position: relative;
       transition: transform 0.4s ease;
+      margin-top: 1px; /* Slightly raised */
     }
 
     .menu-icon::before,
@@ -188,7 +193,7 @@
       .menu-icon {
         width: 24px;
         height: 24px;
-        margin-top: 3px;
+        margin-top: 1px;
         filter: brightness(0) invert(1);
       }
 
@@ -216,7 +221,7 @@
       }
 
       .overlay {
-        display: none !important; /* Disable overlay effect on mobile */
+        display: none !important;
       }
     }
   </style>
