--- a/website/index.html
+++ b/website/index.html
@@ -18,72 +18,52 @@
       font-family: 'Cardo', serif;
       background-color: white;
       overflow-x: hidden;
-      -webkit-user-select: none;
-      -ms-user-select: none;
       user-select: none;
     }
 
     .header {
       position: fixed;
-      top: 8px;
+      top: 10px;
       left: 0;
       width: 100%;
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       justify-content: space-between;
       padding: 0 12px;
       box-sizing: border-box;
       z-index: 1100;
-      background: transparent;
     }
 
-    .menu-icon {
-      width: 20px;
-      height: 20px;
+    .menu-toggle {
+      width: 24px;
+      height: 24px;
       position: relative;
       cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 4px;
       z-index: 1101;
-      filter: brightness(0) invert(1);
-      transition: transform 0.4s ease;
-      margin-top: 1px;
     }
 
-    .menu-icon::before,
-    .menu-icon::after,
-    .menu-icon div {
-      content: '';
-      position: absolute;
+    .menu-toggle span {
+      display: block;
+      height: 2px;
       width: 100%;
-      height: 3px;
-      background-color: white;
-      left: 0;
-      transition: all 0.4s ease;
+      background: white;
+      transition: 0.3s ease;
     }
 
-    .menu-icon::before {
-      top: 2px;
+    .menu-toggle.open span:nth-child(1) {
+      transform: rotate(45deg) translate(4px, 4px);
     }
 
-    .menu-icon div {
-      top: 9px;
-    }
-
-    .menu-icon::after {
-      top: 16px;
-    }
-
-    .menu-icon.open::before {
-      transform: rotate(45deg);
-      top: 9px;
-    }
-
-    .menu-icon.open::after {
-      transform: rotate(-45deg);
-      top: 9px;
-    }
-
-    .menu-icon.open div {
+    .menu-toggle.open span:nth-child(2) {
       opacity: 0;
+    }
+
+    .menu-toggle.open span:nth-child(3) {
+      transform: rotate(-45deg) translate(4px, -4px);
     }
 
     .logo {
@@ -93,11 +73,10 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      margin-top: 0px;
+      margin-top: 2px;
     }
 
     .cart-container {
-      cursor: pointer;
       width: 26px;
       height: 26px;
       display: flex;
@@ -137,29 +116,35 @@
       left: -100%;
       width: 100%;
       height: 100%;
-      background: rgba(40, 40, 40, 0.88);
-      backdrop-filter: blur(8px);
-      font-family: 'Cardo', serif;
-      text-transform: uppercase;
-      padding: 100px 20px 20px 20px;
-      transition: left 0.4s ease-in-out;
+      background-color: rgba(50, 50, 50, 0.9);
+      backdrop-filter: blur(6px);
+      padding-top: 100px;
+      transition: left 0.5s ease;
       z-index: 1000;
-      visibility: hidden;
     }
 
     .sidebar.open {
       left: 0;
-      visibility: visible;
     }
 
-    .sidebar p {
+    .sidebar-menu {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;
+    }
+
+    .sidebar-menu a {
       color: white;
-      margin: 20px 0;
-      font-size: 18px;
+      text-decoration: none;
+      font-size: 20px;
+      font-family: 'Cardo', serif;
+      text-transform: uppercase;
+      transition: color 0.3s;
     }
 
-    .overlay {
-      display: none;
+    .sidebar-menu a:hover {
+      color: #ccc;
     }
 
     .hero-image-box {
@@ -171,32 +156,9 @@
       z-index: 1;
     }
 
-    @media (min-width: 601px) {
-      .menu-icon {
+    @media screen and (min-width: 601px) {
+      .menu-toggle, .sidebar {
         display: none;
-      }
-
-      .logo {
-        height: 40px;
-      }
-
-      .cart-container {
-        width: 32px;
-        height: 32px;
-      }
-
-      .cart-icon {
-        font-size: 28px;
-      }
-
-      .sidebar {
-        width: 250px;
-        background: white;
-        backdrop-filter: none;
-      }
-
-      .sidebar p {
-        color: black;
       }
     }
   </style>
@@ -204,13 +166,12 @@
 <body>
 
   <div class="header">
-    <div class="menu-icon" id="menu-toggle" onclick="toggleSidebar()">
-      <div></div>
+    <div class="menu-toggle" onclick="toggleSidebar(this)">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
-
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true"
-         alt="Matt Scianna" class="logo" onclick="location.reload()" />
-
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna" class="logo" onclick="location.reload()" />
     <div class="cart-container" id="cart-icon">
       <i class="fas fa-shopping-bag cart-icon"></i>
       <div class="cart-count" id="cart-count">0</div>
@@ -218,27 +179,25 @@
   </div>
 
   <div id="sidebar" class="sidebar">
-    <p>Home</p>
-    <p>Shop</p>
-    <p>Contact</p>
-    <p>About</p>
+    <nav class="sidebar-menu">
+      <a href="#shop">SHOP</a>
+      <a href="#lookbooks">LOOKBOOKS</a>
+      <a href="#about">ABOUT</a>
+    </nav>
   </div>
 
   <div class="hero-image-box"></div>
 
   <script>
-    function toggleSidebar() {
-      const sidebar = document.getElementById('sidebar');
-      const icon = document.getElementById('menu-toggle');
-
-      sidebar.classList.toggle('open');
-      icon.classList.toggle('open');
+    function toggleSidebar(icon) {
+      icon.classList.toggle("open");
+      const sidebar = document.getElementById("sidebar");
+      sidebar.classList.toggle("open");
     }
 
-    const cartCount = document.getElementById('cart-count');
-
     function updateCartCount(count) {
-      if(count > 0) {
+      const cartCount = document.getElementById('cart-count');
+      if (count > 0) {
         cartCount.style.display = 'block';
         cartCount.textContent = count;
       } else {
