--- a/website/index.html
+++ b/website/index.html
@@ -15,84 +15,82 @@
       font-family: 'Cardo', serif;
       background-color: white;
       overflow: hidden;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-      touch-action: manipulation;
-      overscroll-behavior: none;
-      height: 100vh;
+      touch-action: none;
     }
 
     .header {
       position: fixed;
-      top: 10px;
+      top: 8px;
       left: 0;
       width: 100%;
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       justify-content: space-between;
-      padding: 0 16px;
-      box-sizing: border-box;
+      padding: 0 12px;
       z-index: 1100;
       background: transparent;
     }
 
     .menu-icon {
-      width: 28px;
-      height: 21px;
-      cursor: pointer;
-      position: relative;
-      z-index: 1101;
-      margin-top: 3px; /* Lowered slightly */
-    }
-
-    .menu-icon div {
-      position: absolute;
       width: 24px;
-      height: 3px;
-      background-color: white;
-      left: 2px;
-      border-radius: 1.5px;
-      transition: all 0.35s ease-in-out;
+      height: 18px;
+      position: relative;
+      cursor: pointer;
+      z-index: 1101;
+      transition: transform 0.3s ease;
     }
 
-    .menu-icon div:nth-child(1) { top: 2px; }
-    .menu-icon div:nth-child(2) { top: 9px; }
-    .menu-icon div:nth-child(3) { top: 16px; }
+    .menu-icon span {
+      position: absolute;
+      height: 2px;
+      width: 100%;
+      background: white;
+      left: 0;
+      transition: all 0.3s ease;
+    }
 
-    .menu-icon.open div:nth-child(1) {
+    .menu-icon span:nth-child(1) {
+      top: 0;
+    }
+
+    .menu-icon span:nth-child(2) {
+      top: 8px;
+    }
+
+    .menu-icon span:nth-child(3) {
+      top: 16px;
+    }
+
+    .menu-icon.open span:nth-child(1) {
       transform: rotate(45deg);
-      top: 9px;
+      top: 8px;
     }
-    .menu-icon.open div:nth-child(2) {
+
+    .menu-icon.open span:nth-child(2) {
       opacity: 0;
     }
-    .menu-icon.open div:nth-child(3) {
+
+    .menu-icon.open span:nth-child(3) {
       transform: rotate(-45deg);
-      top: 9px;
+      top: 8px;
     }
 
     .logo {
       height: 26px;
-      cursor: pointer;
-      z-index: 1101;
+      margin-top: 3px;
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      margin-top: 2px;
-      user-select: none;
+      z-index: 1101;
     }
 
     .cart-container {
-      cursor: pointer;
       width: 26px;
       height: 26px;
       display: flex;
       justify-content: center;
       align-items: center;
       z-index: 1101;
-      margin-top: 1px;
     }
 
     .cart-icon {
@@ -101,69 +99,35 @@
     }
 
     .cart-count {
-      position: absolute;
-      top: -6px;
-      right: -10px;
-      background-color: #8B0000;
-      color: white;
-      font-family: Arial, sans-serif;
-      font-size: 14px;
-      padding: 1px 5px;
-      border-radius: 50%;
       display: none;
-      font-weight: bold;
-      min-width: 18px;
-      text-align: center;
-      line-height: 1.2;
     }
 
     .sidebar {
       position: fixed;
       top: 0;
       left: -100%;
-      width: 100vw;
+      width: 100%;
       height: 100%;
-      background-color: rgba(50,50,50,0.94);
-      backdrop-filter: blur(12px);
-      font-family: 'Cardo', serif;
-      text-transform: uppercase;
-      padding-top: 90px;
-      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-      transition: left 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
-      z-index: 1000;
-      visibility: hidden;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      background: rgba(50, 50, 50, 0.9);
+      backdrop-filter: blur(8px);
+      padding: 100px 20px 20px 20px;
+      box-sizing: border-box;
       text-align: center;
+      text-transform: uppercase;
+      font-family: 'Cardo', serif;
+      font-size: 20px;
+      color: white;
+      transition: left 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+      z-index: 1000;
     }
 
     .sidebar.open {
       left: 0;
-      visibility: visible;
     }
 
     .sidebar p {
       margin: 20px 0;
       cursor: pointer;
-      font-size: 18px;
-      color: white;
-    }
-
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background: transparent;
-      display: none;
-      z-index: 999;
-    }
-
-    .overlay.show {
-      display: block;
     }
 
     .hero-image-box {
@@ -174,47 +138,19 @@
       position: relative;
       z-index: 1;
     }
-
-    @media screen and (max-width: 600px) {
-      .header {
-        top: 8px;
-        padding: 0 12px;
-        align-items: center;
-      }
-
-      .logo {
-        height: 26px;
-        margin-top: 2px;
-      }
-
-      .cart-container {
-        margin-top: 1px;
-      }
-
-      .sidebar {
-        padding-top: 90px;
-      }
-
-      .sidebar p {
-        color: white;
-      }
-    }
   </style>
 </head>
 <body>
 
-  <div class="overlay" id="overlay" onclick="closeSidebar()"></div>
-
   <div class="header">
-    <div class="menu-icon" id="menu-icon" onclick="toggleSidebar()">
-      <div></div>
-      <div></div>
-      <div></div>
+    <div class="menu-icon" onclick="toggleSidebar()" id="menuIcon">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna" class="logo" onclick="location.reload()" />
-    <div class="cart-container" id="cart-icon">
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna" class="logo" />
+    <div class="cart-container">
       <i class="fas fa-shopping-bag cart-icon"></i>
-      <div class="cart-count" id="cart-count">0</div>
     </div>
   </div>
 
@@ -222,32 +158,18 @@
     <p onclick="location.href='https://mattscianna.com/shop'">SHOP</p>
     <p onclick="location.href='https://mattscianna.com/lookbooks'">LOOKBOOKS</p>
     <p onclick="location.href='https://mattscianna.com/about'">ABOUT</p>
+    <p onclick="location.href='https://mattscianna.com/contact'">CONTACT</p>
   </div>
 
   <div class="hero-image-box"></div>
 
   <script>
-    const menuIcon = document.getElementById('menu-icon');
-    const sidebar = document.getElementById('sidebar');
-    const overlay = document.getElementById('overlay');
-
     function toggleSidebar() {
+      const sidebar = document.getElementById('sidebar');
+      const menuIcon = document.getElementById('menuIcon');
       sidebar.classList.toggle('open');
-      overlay.classList.toggle('show');
       menuIcon.classList.toggle('open');
     }
-
-    function closeSidebar() {
-      sidebar.classList.remove('open');
-      overlay.classList.remove('show');
-      menuIcon.classList.remove('open');
-    }
-
-    document.addEventListener('touchmove', function(event) {
-      if(sidebar.classList.contains('open')) {
-        event.preventDefault();
-      }
-    }, { passive: false });
   </script>
 
 </body>
