--- a/website/index.html
+++ b/website/index.html
@@ -20,7 +20,7 @@
 
     .header {
       position: fixed;
-      top: 8px;
+      top: 10px;
       left: 0;
       width: 100%;
       display: flex;
@@ -32,12 +32,13 @@
     }
 
     .menu-icon {
-      width: 24px;
-      height: 18px;
+      width: 20px;
+      height: 16px;
       position: relative;
       cursor: pointer;
       z-index: 1101;
       transition: transform 0.3s ease;
+      margin-top: 2px;
     }
 
     .menu-icon span {
@@ -46,7 +47,7 @@
       width: 100%;
       background: white;
       left: 0;
-      transition: all 0.3s ease;
+      transition: all 0.3s ease-in-out;
     }
 
     .menu-icon span:nth-child(1) {
@@ -54,16 +55,16 @@
     }
 
     .menu-icon span:nth-child(2) {
-      top: 8px;
+      top: 7px;
     }
 
     .menu-icon span:nth-child(3) {
-      top: 16px;
+      top: 14px;
     }
 
     .menu-icon.open span:nth-child(1) {
       transform: rotate(45deg);
-      top: 8px;
+      top: 7px;
     }
 
     .menu-icon.open span:nth-child(2) {
@@ -72,12 +73,12 @@
 
     .menu-icon.open span:nth-child(3) {
       transform: rotate(-45deg);
-      top: 8px;
+      top: 7px;
     }
 
     .logo {
       height: 26px;
-      margin-top: 3px;
+      margin-top: 2px;
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
@@ -85,16 +86,17 @@
     }
 
     .cart-container {
-      width: 26px;
-      height: 26px;
+      width: 24px;
+      height: 24px;
       display: flex;
       justify-content: center;
       align-items: center;
       z-index: 1101;
+      margin-top: 2px;
     }
 
     .cart-icon {
-      font-size: 22px;
+      font-size: 20px;
       color: white;
     }
 
@@ -117,7 +119,7 @@
       font-family: 'Cardo', serif;
       font-size: 20px;
       color: white;
-      transition: left 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+      transition: left 0.45s ease-in-out;
       z-index: 1000;
     }
 
