--- a/website/index.html
+++ b/website/index.html
@@ -26,7 +26,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 0 12px;
+      padding: 0 16px;
       z-index: 1100;
       background: transparent;
     }
@@ -78,7 +78,7 @@
 
     .logo {
       height: 26px;
-      margin-top: 2px;
+      margin-top: 1px;
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
@@ -93,6 +93,7 @@
       align-items: center;
       z-index: 1101;
       margin-top: 2px;
+      margin-right: -4px; /* Shift it left into view */
     }
 
     .cart-icon {
