--- a/website/index.html
+++ b/website/index.html
@@ -38,7 +38,7 @@
       cursor: pointer;
       z-index: 1101;
       transition: transform 0.3s ease;
-      margin-top: 2px;
+      margin-top: 4px;
     }
 
     .menu-icon span {
@@ -78,9 +78,9 @@
 
     .logo {
       height: 26px;
-      margin-top: 1px;
       position: absolute;
       left: 50%;
+      top: 5px;
       transform: translateX(-50%);
       z-index: 1101;
     }
@@ -92,8 +92,7 @@
       justify-content: center;
       align-items: center;
       z-index: 1101;
-      margin-top: 2px;
-      margin-right: -4px; /* Shift it left into view */
+      margin-top: 4px;
     }
 
     .cart-icon {
