--- a/website/index.html
+++ b/website/index.html
@@ -5,131 +5,149 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Matt Scianna</title>
 
+  <!-- Font: Cardo -->
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
+  
+  <!-- Font Awesome for shopping bag icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <style>
-    html, body {
+    body {
       margin: 0;
-      padding: 0;
       font-family: 'Cardo', serif;
       background-color: white;
-      overflow: hidden;
-      touch-action: none;
+      overflow-x: hidden;
     }
 
     .header {
       position: fixed;
       top: 10px;
-      left: 0;
-      width: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      height: 90px;
       display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 16px;
+      align-items: flex-start;
+      justify-content: center;
+      padding: 0 20px;
+      box-sizing: border-box;
+      width: 100%;
+      max-width: 1200px;
+      pointer-events: auto;
       z-index: 1100;
       background: transparent;
     }
 
     .menu-icon {
-      width: 20px;
-      height: 16px;
-      position: relative;
+      position: absolute;
+      left: 20px;
+      top: 10px;
+      width: 40px;
+      height: auto;
       cursor: pointer;
       z-index: 1101;
-      transition: transform 0.3s ease;
-      margin-top: 4px;
-    }
-
-    .menu-icon span {
-      position: absolute;
-      height: 2px;
-      width: 100%;
-      background: white;
-      left: 0;
-      transition: all 0.3s ease-in-out;
-    }
-
-    .menu-icon span:nth-child(1) {
-      top: 0;
-    }
-
-    .menu-icon span:nth-child(2) {
-      top: 7px;
-    }
-
-    .menu-icon span:nth-child(3) {
-      top: 14px;
-    }
-
-    .menu-icon.open span:nth-child(1) {
-      transform: rotate(45deg);
-      top: 7px;
-    }
-
-    .menu-icon.open span:nth-child(2) {
-      opacity: 0;
-    }
-
-    .menu-icon.open span:nth-child(3) {
-      transform: rotate(-45deg);
-      top: 7px;
     }
 
     .logo {
-      height: 26px;
-      position: absolute;
-      left: 50%;
-      top: 5px;
-      transform: translateX(-50%);
+      height: 40px;
+      cursor: pointer;
+      margin-top: 5px;
       z-index: 1101;
+      filter: drop-shadow(0 2px 10px rgba(0, 0, 0, 0.4)); /* Aime Leon Dore–style shadow */
     }
 
     .cart-container {
-      width: 24px;
-      height: 24px;
+      position: absolute;
+      right: 20px;
+      top: 10px;
+      cursor: pointer;
+      width: 40px;
+      height: 40px;
       display: flex;
       justify-content: center;
       align-items: center;
       z-index: 1101;
-      margin-top: 4px;
     }
 
     .cart-icon {
-      font-size: 20px;
+      font-size: 28px;
       color: white;
+      position: relative;
+      filter: drop-shadow(0 2px 10px rgba(0, 0, 0, 0.4)); /* Matching soft shadow */
     }
 
     .cart-count {
+      position: absolute;
+      top: -6px;
+      right: -10px;
+      background-color: #8B0000;
+      color: white;
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+      padding: 1px 5px;
+      border-radius: 50%;
       display: none;
+      pointer-events: none;
+      user-select: none;
+      font-weight: bold;
+      min-width: 18px;
+      text-align: center;
+      line-height: 1.2;
+      text-shadow: 0 0 3px rgba(0,0,0,0.8);
     }
 
     .sidebar {
       position: fixed;
       top: 0;
       left: -100%;
-      width: 100%;
+      width: 250px;
       height: 100%;
-      background: rgba(50, 50, 50, 0.9);
-      backdrop-filter: blur(8px);
-      padding: 100px 20px 20px 20px;
-      box-sizing: border-box;
-      text-align: center;
-      text-transform: uppercase;
+      background-color: white;
       font-family: 'Cardo', serif;
-      font-size: 20px;
-      color: white;
-      transition: left 0.45s ease-in-out;
+      text-transform: uppercase;
+      padding: 100px 20px 20px 20px;
+      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+      transition: left 0.15s ease;
       z-index: 1000;
+      visibility: hidden;
     }
 
     .sidebar.open {
       left: 0;
+      visibility: visible;
     }
 
-    .sidebar p {
-      margin: 20px 0;
+    .sidebar-close-container {
+      position: absolute;
+      top: 36px;
+      left: 20px;
+      width: 32px;
+      height: 32px;
       cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1050;
+    }
+
+    .sidebar-close {
+      width: 18px;
+      height: auto;
+      display: block;
+    }
+
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: rgba(0,0,0,0.1);
+      display: none;
+      z-index: 999;
+    }
+
+    .overlay.show {
+      display: block;
     }
 
     .hero-image-box {
@@ -140,27 +158,71 @@
       position: relative;
       z-index: 1;
     }
+
+    @media screen and (max-width: 600px) {
+      .header {
+        height: 70px;
+        top: 8px;
+        padding: 0 16px;
+      }
+
+      .logo {
+        height: 30px;
+        margin-top: 3px;
+      }
+
+      .menu-icon {
+        width: 32px;
+        left: 16px;
+        top: 8px;
+      }
+
+      .cart-container {
+        width: 32px;
+        height: 32px;
+        right: 16px;
+        top: 8px;
+      }
+
+      .cart-icon {
+        font-size: 24px;
+      }
+
+      .sidebar-close-container {
+        width: 32px;
+        height: 32px;
+        left: 16px;
+        top: 30px;
+      }
+
+      .sidebar-close {
+        width: 18px;
+      }
+    }
   </style>
 </head>
 <body>
 
+  <div class="overlay" id="overlay" onclick="closeSidebar()"></div>
+
   <div class="header">
-    <div class="menu-icon" onclick="toggleSidebar()" id="menuIcon">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna" class="logo" />
-    <div class="cart-container">
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MENU-white.png?raw=true" alt="Menu Icon" class="menu-icon" onclick="toggleSidebar()" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna" class="logo" onclick="location.reload()" />
+    
+    <div class="cart-container" id="cart-icon">
       <i class="fas fa-shopping-bag cart-icon"></i>
+      <div class="cart-count" id="cart-count">0</div>
     </div>
   </div>
 
   <div id="sidebar" class="sidebar">
-    <p onclick="location.href='https://mattscianna.com/shop'">SHOP</p>
-    <p onclick="location.href='https://mattscianna.com/lookbooks'">LOOKBOOKS</p>
-    <p onclick="location.href='https://mattscianna.com/about'">ABOUT</p>
-    <p onclick="location.href='https://mattscianna.com/contact'">CONTACT</p>
+    <div class="sidebar-close-container" onclick="closeSidebar()">
+      <img src="https://github.com/mattscianna/mattscianna/blob/main/X.png?raw=true" alt="Close Sidebar" class="sidebar-close" />
+    </div>
+    <p>Home</p>
+    <p>Shop</p>
+    <p>Contact</p>
+    <p>About</p>
   </div>
 
   <div class="hero-image-box"></div>
@@ -168,10 +230,28 @@
   <script>
     function toggleSidebar() {
       const sidebar = document.getElementById('sidebar');
-      const menuIcon = document.getElementById('menuIcon');
+      const overlay = document.getElementById('overlay');
       sidebar.classList.toggle('open');
-      menuIcon.classList.toggle('open');
+      overlay.classList.toggle('show');
     }
+
+    function closeSidebar() {
+      document.getElementById('sidebar').classList.remove('open');
+      document.getElementById('overlay').classList.remove('show');
+    }
+
+    const cartCount = document.getElementById('cart-count');
+
+    function updateCartCount(count) {
+      if(count > 0) {
+        cartCount.style.display = 'block';
+        cartCount.textContent = count;
+      } else {
+        cartCount.style.display = 'none';
+      }
+    }
+
+    updateCartCount(0);
   </script>
 
 </body>
