--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Matt Scianna</title>
 
+  <!-- Font: Cardo -->
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
+  
+  <!-- Font Awesome for shopping bag icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <style>
@@ -15,8 +18,11 @@
       font-family: 'Cardo', serif;
       background-color: white;
       overflow: hidden;
+      -webkit-user-select: none; /* disable text selection on mobile */
+      -moz-user-select: none;
+      -ms-user-select: none;
       user-select: none;
-      touch-action: none;
+      touch-action: manipulation;
     }
 
     .header {
@@ -25,120 +31,112 @@
       left: 0;
       width: 100%;
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       justify-content: space-between;
       padding: 0 16px;
+      box-sizing: border-box;
       z-index: 1100;
       background: transparent;
     }
 
-    /* Menu Icon - smaller and old position */
     .menu-icon {
-      width: 18px;
-      height: 14px;
-      position: relative;
+      width: 32px;
+      height: auto;
       cursor: pointer;
       z-index: 1101;
-      margin-top: 8px; /* old position */
+      filter: none; /* no color filter */
       transition: transform 0.3s ease;
     }
 
-    .menu-icon span {
-      position: absolute;
-      height: 2px;
-      width: 100%;
-      background: white;
-      left: 0;
-      transition: all 0.3s ease-in-out;
-    }
-
-    .menu-icon span:nth-child(1) {
-      top: 0;
-    }
-
-    .menu-icon span:nth-child(2) {
-      top: 6px;
-    }
-
-    .menu-icon span:nth-child(3) {
-      top: 12px;
-    }
-
-    /* Transform into classic X */
-    .menu-icon.open span:nth-child(1) {
-      transform: rotate(45deg);
-      top: 6px;
-    }
-
-    .menu-icon.open span:nth-child(2) {
-      opacity: 0;
-    }
-
-    .menu-icon.open span:nth-child(3) {
-      transform: rotate(-45deg);
-      top: 6px;
-    }
-
-    /* Logo centered and old size, no shadow */
     .logo {
-      height: 26px;
+      height: 40px;
+      cursor: pointer;
+      z-index: 1101;
       position: absolute;
       left: 50%;
-      top: 6px;
       transform: translateX(-50%);
-      z-index: 1101;
-      filter: none;
+      margin-top: 5px;
     }
 
-    /* Shopping bag icon old size and position */
     .cart-container {
-      width: 24px;
-      height: 24px;
+      cursor: pointer;
+      width: 32px;
+      height: 32px;
       display: flex;
       justify-content: center;
       align-items: center;
       z-index: 1101;
-      margin-top: 8px;
-      margin-right: 8px;
     }
 
     .cart-icon {
-      font-size: 20px;
+      font-size: 28px;
       color: white;
-      filter: none;
     }
 
-    /* Sidebar */
+    .cart-count {
+      position: absolute;
+      top: -6px;
+      right: -10px;
+      background-color: #8B0000;
+      color: white;
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+      padding: 1px 5px;
+      border-radius: 50%;
+      display: none;
+      pointer-events: none;
+      user-select: none;
+      font-weight: bold;
+      min-width: 18px;
+      text-align: center;
+      line-height: 1.2;
+    }
+
     .sidebar {
       position: fixed;
       top: 0;
       left: -100%;
-      width: 100%;
+      width: 250px;
       height: 100%;
-      background: rgba(50, 50, 50, 0.9);
-      backdrop-filter: blur(8px);
-      padding: 100px 20px 20px 20px;
-      box-sizing: border-box;
-      text-align: center;
-      text-transform: uppercase;
+      background-color: rgba(50, 50, 50, 0.95);
       font-family: 'Cardo', serif;
-      font-size: 20px;
-      color: white;
-      transition: left 0.4s ease;
+      text-transform: uppercase;
+      padding: 100px 20px 20px 20px;
+      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+      transition: left 0.3s ease;
       z-index: 1000;
+      visibility: hidden;
+      color: white;
+      backdrop-filter: blur(10px);
     }
 
     .sidebar.open {
       left: 0;
+      visibility: visible;
     }
 
     .sidebar p {
-      margin: 20px 0;
+      text-align: center;
+      margin: 25px 0;
+      font-size: 18px;
       cursor: pointer;
-      user-select: none;
     }
 
-    /* Hero Image */
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: transparent;
+      display: none;
+      z-index: 999;
+    }
+
+    .overlay.show {
+      display: block;
+    }
+
     .hero-image-box {
       width: 100vw;
       height: 100vh;
@@ -147,38 +145,133 @@
       position: relative;
       z-index: 1;
     }
+
+    /* MOBILE STYLES */
+    @media screen and (max-width: 600px) {
+      .header {
+        top: 8px;
+        padding: 0 12px;
+        align-items: center;
+      }
+
+      .menu-icon {
+        width: 28px;          /* smaller */
+        margin-top: 4px;      /* slightly lower */
+        filter: brightness(0) invert(1); /* white */
+        cursor: pointer;
+      }
+
+      .logo {
+        height: 26px;
+        position: absolute;
+        left: 40%;            /* moved left */
+        top: 6px;
+        transform: translateX(-50%);
+        margin-top: 0;
+      }
+
+      .cart-container {
+        width: 26px;
+        height: 26px;
+        position: absolute;
+        left: 8px;            /* moved left */
+        top: 6px;
+        margin-left: 0;
+        margin-top: 0;
+      }
+
+      .cart-icon {
+        font-size: 22px;
+        color: white;
+      }
+
+      .sidebar {
+        width: 100vw;
+        left: -100%;
+        background-color: rgba(50, 50, 50, 0.95);
+        backdrop-filter: blur(10px);
+        transition: left 0.4s ease; /* smoother */
+        padding: 100px 20px 20px 20px;
+        color: white;
+      }
+
+      .sidebar.open {
+        left: 0;
+        visibility: visible;
+      }
+
+      .sidebar p {
+        text-align: center;
+        margin: 25px 0;
+        font-size: 18px;
+        cursor: pointer;
+      }
+
+      .overlay {
+        background: transparent; /* no darkening on hero */
+      }
+    }
   </style>
 </head>
 <body>
 
+  <div class="overlay" id="overlay" onclick="closeSidebar()"></div>
+
   <div class="header">
-    <div class="menu-icon" onclick="toggleSidebar()" id="menuIcon">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna" class="logo" />
-    <div class="cart-container">
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MENU-white.png?raw=true" alt="Menu Icon" class="menu-icon" id="menuIcon" onclick="toggleSidebar()" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna" class="logo" onclick="location.reload()" />
+    
+    <div class="cart-container" id="cart-icon">
       <i class="fas fa-shopping-bag cart-icon"></i>
+      <div class="cart-count" id="cart-count">0</div>
     </div>
   </div>
 
   <div id="sidebar" class="sidebar">
-    <p onclick="location.href='https://mattscianna.com/shop'">SHOP</p>
-    <p onclick="location.href='https://mattscianna.com/lookbooks'">LOOKBOOKS</p>
-    <p onclick="location.href='https://mattscianna.com/about'">ABOUT</p>
-    <p onclick="location.href='https://mattscianna.com/contact'">CONTACT</p>
+    <p onclick="location.href='shop.html'">SHOP</p>
+    <p onclick="location.href='lookbooks.html'">LOOKBOOKS</p>
+    <p onclick="location.href='about.html'">ABOUT</p>
+    <p onclick="location.href='contact.html'">CONTACT</p>
   </div>
 
   <div class="hero-image-box"></div>
 
   <script>
+    const sidebar = document.getElementById('sidebar');
+    const overlay = document.getElementById('overlay');
+    const menuIcon = document.getElementById('menuIcon');
+
     function toggleSidebar() {
-      const sidebar = document.getElementById('sidebar');
-      const menuIcon = document.getElementById('menuIcon');
-      sidebar.classList.toggle('open');
-      menuIcon.classList.toggle('open');
+      const isOpen = sidebar.classList.contains('open');
+      if(isOpen) {
+        sidebar.classList.remove('open');
+        overlay.classList.remove('show');
+        menuIcon.src = "https://github.com/mattscianna/mattscianna/blob/main/MENU-white.png?raw=true";
+      } else {
+        sidebar.classList.add('open');
+        overlay.classList.add('show');
+        menuIcon.src = "https://github.com/mattscianna/mattscianna/blob/main/X-white.png?raw=true";
+      }
     }
+
+    function closeSidebar() {
+      sidebar.classList.remove('open');
+      overlay.classList.remove('show');
+      menuIcon.src = "https://github.com/mattscianna/mattscianna/blob/main/MENU-white.png?raw=true";
+    }
+
+    const cartCount = document.getElementById('cart-count');
+
+    function updateCartCount(count) {
+      if(count > 0) {
+        cartCount.style.display = 'block';
+        cartCount.textContent = count;
+      } else {
+        cartCount.style.display = 'none';
+      }
+    }
+
+    updateCartCount(0);
   </script>
 
 </body>
