--- a/website/index.html
+++ b/website/index.html
@@ -53,7 +53,7 @@
       cursor: pointer;
       z-index: 1101;
       position: absolute;
-      left: 50%;
+      left: 55%; /* moved right to be exactly centered */
       transform: translateX(-50%);
       margin-top: 5px;
     }
@@ -66,6 +66,9 @@
       justify-content: center;
       align-items: center;
       z-index: 1101;
+      position: absolute;
+      right: 16px; /* back on the right */
+      top: 10px;
     }
 
     .cart-icon {
@@ -96,18 +99,21 @@
       position: fixed;
       top: 0;
       left: -100%;
-      width: 250px;
+      width: 100vw;
       height: 100%;
       background-color: rgba(50, 50, 50, 0.95);
       font-family: 'Cardo', serif;
       text-transform: uppercase;
       padding: 100px 20px 20px 20px;
       box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-      transition: left 0.3s ease;
+      transition: left 0.4s ease;
       z-index: 1000;
       visibility: hidden;
       color: white;
       backdrop-filter: blur(10px);
+      display: flex;
+      flex-direction: column;
+      align-items: center; /* center text horizontally */
     }
 
     .sidebar.open {
@@ -116,10 +122,12 @@
     }
 
     .sidebar p {
-      text-align: center;
       margin: 25px 0;
       font-size: 18px;
       cursor: pointer;
+      text-align: center; /* center text */
+      width: 100%;
+      max-width: 220px;
     }
 
     .overlay {
@@ -164,7 +172,7 @@
       .logo {
         height: 26px;
         position: absolute;
-        left: 40%;            /* moved left */
+        left: 55%;            /* moved right */
         top: 6px;
         transform: translateX(-50%);
         margin-top: 0;
@@ -174,7 +182,7 @@
         width: 26px;
         height: 26px;
         position: absolute;
-        left: 8px;            /* moved left */
+        right: 12px;          /* back to right */
         top: 6px;
         margin-left: 0;
         margin-top: 0;
@@ -193,6 +201,9 @@
         transition: left 0.4s ease; /* smoother */
         padding: 100px 20px 20px 20px;
         color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center; /* center sidebar text */
       }
 
       .sidebar.open {
@@ -205,6 +216,8 @@
         margin: 25px 0;
         font-size: 18px;
         cursor: pointer;
+        width: 100%;
+        max-width: 220px;
       }
 
       .overlay {
